# we-rent-api

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  routes.py
src/config/: base.py  dev.py  prod.py
src/controllers/: hello_controller.py  product_controller.py  product_review_controller.py  review_reply_controller.py  user_controller.py
src/models/: __init__.py  product_models.py  product_review_models.py  review_reply.py  user_models.py
src/schemas/: product_schema.py  user_schema.py
src/services/: product_service.py  review_reply_service.py  review_service.py  user_service.py
src/validators/: product_review_validator.py
