[tool.poetry]
name = "we rent api"
version = "0.1.0"
description = ""
authors = ["kingahmadr <ahmadnromiz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi-sqlalchemy = "^0.2.1"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
pymysql = "^1.1.1"
pytz = "^2024.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
aioimaplib = "^1.1.0"
cryptography = "^43.0.3"
python-multipart = "^0.0.20"
email-validator = "^2.2.0"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"